static/psi4manual/1.2.1/_sources/autodoc_testsuite_python.rst.txt

.. _`apdx:testSuitepython`:

=============================================
PYTHON
=============================================

=============================================   ============
Input File                                      Description 
=============================================   ============
:srcsample:`python/memdfjk`                     compare MemJK and DiskJK
:srcsample:`python/3-index-transforms`          examine JK packing forms
:srcsample:`python/mints9`                      A test of the basis specification.  Various basis sets are specified outright and in blocks, both orbital and auxiliary. Constructs libmints BasisSet objects through the constructor that calls qcdb.BasisSet infrastructure. Checks that the resulting bases are of the right size and checks that symmetry of the Molecule observes the basis assignment to atoms.
:srcsample:`python/mints13`                     test fragment decomposition + to/from_dict
:srcsample:`python/curve`                       PsiAPI scanning a potential energy curve
:srcsample:`python/pubchem`                     PsiAPI pubchem access
:srcsample:`python/energy`                      PsiAPI energy example
:srcsample:`python/cc54`                        CCSD dipole with user-specified basis set
:srcsample:`python/mints2`                      A test of the basis specification.  A benzene atom is defined using a ZMatrix containing dummy atoms and various basis sets are assigned to different atoms.  The symmetry of the molecule is automatically lowered to account for the different basis sets.
:srcsample:`python/vibanalysis`                 compare analytic, findif by G, findif by E vibrational analyses for several mols
=============================================   ============

