static/psi4manual/1.4.0/_sources/autodoc_testsuite_python.rst.txt

.. _`apdx:testSuitepython`:

=======================================================
PYTHON
=======================================================

=======================================================   ============
Input File                                                Description 
=======================================================   ============
:srcsamplepy:`python/pubchem`                             PsiAPI pubchem access
:srcsamplepy:`python/mints14`                             Check for correctness of ESP values. The ESP values are calculated using one or four threads The one thread values are checked against the four thread values. The one thread values are  also checked against the reference values (1 thread values computed, when generating this test). Caution: The reference values are not obtained using an actual physical reference, but rather generated by Psi4 at one point in time.
:srcsamplepy:`python/energy`                              PsiAPI energy example
:srcsamplepy:`python/cc54`                                CCSD dipole with user-specified basis set
:srcsamplepy:`python/cc-amps`                             API access to CCSD amplitudes
:srcsamplepy:`python/mints2`                              A test of the basis specification.  A benzene atom is defined using a ZMatrix containing dummy atoms and various basis sets are assigned to different atoms.  The symmetry of the molecule is automatically lowered to account for the different basis sets.
:srcsamplepy:`python/3-index-transforms`                  examine JK packing forms
:srcsamplepy:`python/mints13`                             test fragment decomposition + to/from_dict
:srcsamplepy:`python/mints9`                              A test of the basis specification.  Various basis sets are specified outright and in blocks, both orbital and auxiliary. Constructs libmints BasisSet objects through the constructor that calls qcdb.BasisSet infrastructure. Checks that the resulting bases are of the right size and checks that symmetry of the Molecule observes the basis assignment to atoms.
:srcsamplepy:`python/databases`                           PsiAPI energy example
:srcsamplepy:`python/curve`                               PsiAPI scanning a potential energy curve
=======================================================   ============

